--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/universe">Universe Selection</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/email_history?org_id=37">Email History</a>
+                    </li>
                 </ul>
             </div>
         </div>
