--- a/templates/partials/filter_controls.html
+++ b/templates/partials/filter_controls.html
@@ -51,6 +51,12 @@
     
     <div class="col-md-6 text-center">
       <div class="d-inline-block">
+        <div class="btn-group me-2">
+          <a href="/email_history?org_id={{ org_id }}" class="btn btn-info">
+            <i class="fas fa-history me-2"></i>Email History
+          </a>
+        </div>
+        
         <div class="btn-group dropstart me-2">
           <button class="btn btn-primary dropdown-toggle" type="button" id="sendEmailsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-paper-plane me-2"></i>Send Emails
