--- a/templates/send_emails.html
+++ b/templates/send_emails.html
@@ -46,6 +46,8 @@
                                 {% else %}
                                 <p class="mb-0 mt-1"><em>You're viewing a random sample of {{ sample_size }} contacts from your filters. To see all contacts, go back and check "Show All".</em></p>
                                 {% endif %}
+                                <hr>
+                                <p class="mb-0 mt-1"><a href="/email_history?org_id={{ org_id }}" class="alert-link">View Email History</a> to see previously sent emails and manage batches.</p>
                             </div>
                         </div>
                         
